Fix some spacing between header text and buttons

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -52,6 +52,12 @@ a {
   }
 }
 
+h2.btn-toolbar {
+  .heading-text {
+    margin-right: 32px;
+  }
+}
+
 h3 {
   font-size: 28px;
   margin-top: 16px !important;
